--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-final-form": "^6.5.2",
     "react-scripts": "4.0.2",
     "react-select": "^4.1.0",
+    "react-table": "^7.6.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
